--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,13 @@
   .h3{
     @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
   }
+  .text-outline{
+    -webkit-text-stroke: 1px #ffffff;
+  }
+  
+  .text-outline-hover {
+    -webkit-text-stroke: 1px #DC143C;
+  }
 }
 
 
